--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-        "install:all": "npm install && cd client && npm install && cd ../server && npm install",
-        "build:all": "cd client && npm run build",
-        "start": "cd server && npm start",
-        "deploy": "npm run build:all && npm start"
+        "postinstall": "cd client && npm install && cd ../server && npm install",
+        "build": "cd client && npm run build",
+        "start": "cd server && node index.js"
     }
 }
