--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
     "nodemailer": "^8.0.0",
+    "resend": "^6.9.1",
     "sqlite3": "^5.1.7"
   }
 }
