--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^8.0.0",
     "resend": "^6.9.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "stripe": "^20.3.1"
   }
 }
